--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "sugar": "^2.0.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "scripts": {
