--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^2.4.1",
+    "multer": "^1.4.3",
     "pg": "^8.6.0",
     "react-dropzone": "^11.3.4",
     "react-router-dom": "^5.2.0",
