--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^10.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
