--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "dotenv": "^10.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "cd frontend && npm i && npm run build",
     "start": "node index.js",
-    "heroku-postbuild": "cd frontend && npm i && npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
