--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^3.4.4",
+    "sugar": "^2.0.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
