--- a/package.json
+++ b/package.json
@@ -11,22 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^4.7.4",
-    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mapbox-gl": "^2.4.1",
     "multer": "^1.4.3",
-    "pg": "^8.6.0",
-    "react-dropzone": "^11.3.4",
-    "react-router-dom": "^5.2.0",
-    "sugar": "^2.0.6",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "dotenv": "^10.0.0"
+    "pg": "^8.7.1"
   },
   "engines": {
     "node": "16.13.0",
