--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "history": "^5.1.0",
+    "immer": "^9.0.6",
     "mapbox-gl": "^2.5.1",
+    "node-notifier": "^8.0.1",
     "react": "^17.0.2",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "set-value": "^4.0.1",
     "sugar": "^2.0.6",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
