--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ansi-html": "^0.0.7",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "history": "^5.1.0",
