--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
     "@testing-library/user-event": "^12.8.3",
     "ansi-html": "^0.0.7",
     "axios": "^0.24.0",
+    "browserslist": "^4.19.1",
     "dotenv": "^10.0.0",
     "history": "^5.1.0",
     "immer": "^9.0.6",
     "mapbox-gl": "^2.5.1",
+    "nanoid": "^3.2.0",
+    "node-forge": "^1.2.1",
     "node-notifier": "^8.0.1",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
