--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lost_and_found_dog_app_frontend",
+  "name": "lost_and_found",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
