--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,20 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ansi-html": "^0.0.7",
+    "ansi-regex": "^6.0.1",
     "axios": "^0.24.0",
-    "browserslist": "^4.19.1",
+    "browserslist": "^4.19.3",
     "dotenv": "^10.0.0",
     "history": "^5.1.0",
-    "immer": "^9.0.6",
+    "immer": "^9.0.12",
     "mapbox-gl": "^2.5.1",
     "nanoid": "^3.2.0",
     "node-forge": "^1.2.1",
-    "node-notifier": "^8.0.1",
-    "postcss": "^8.4.5",
+    "node-notifier": "^8.0.2",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.7",
     "react": "^17.0.2",
-    "react-dev-utils": "^11.0.4",
+    "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-router-dom": "^5.2.0",
