--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "glob-parent": "^6.0.2",
     "json-schema": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "react-dev-utils": "^12.0.0"
   },
   "engines": {
     "node": "16.13.0",
