--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
     "axios": "^0.24.0",
     "browserslist": "^4.19.3",
     "dotenv": "^10.0.0",
+    "glob-parent": "^6.0.2",
     "history": "^5.1.0",
     "immer": "^9.0.12",
     "mapbox-gl": "^2.5.1",
     "nanoid": "^3.2.0",
     "node-forge": "^1.2.1",
-    "node-notifier": "^8.0.2",
+    "node-notifier": "^10.0.1",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.7",
     "react": "^17.0.2",
