--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-	"name": "lost_and_found",
-	"version": "1.0.0",
-	"description": "Lost & Found App",
-	"main": "index.js",
-	"scripts": {
-		"heroku-postbuild": "cd frontend && npm i && npm run build",
-		"start": "node index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Lilla Németh",
-	"license": "MIT",
-	"dependencies": {
-		"bcryptjs": "^2.4.3",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
-		"glob-parent": "^6.0.2",
-		"json-schema": "^0.4.0",
-		"jsonwebtoken": "^8.5.1",
-		"multer": "^1.4.4",
-		"pg": "^8.7.3",
-		"react-dev-utils": "^12.0.0"
-	},
-	"engines": {
-		"node": "16.13.0",
-		"npm": "8.1.3"
-	}
+  "name": "lost_and_found",
+  "version": "1.0.0",
+  "description": "Lost & Found App",
+  "main": "index.js",
+  "scripts": {
+    "heroku-postbuild": "cd frontend && npm i && npm run build",
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Lilla Németh",
+  "license": "MIT",
+  "dependencies": {
+    "async": "^3.2.3",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "glob-parent": "^6.0.2",
+    "json-schema": "^0.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4-lts.1",
+    "nth-check": "^2.1.1",
+    "pg": "^8.7.3",
+    "react-dev-utils": "^12.0.1"
+  },
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.3.0"
+  }
 }
