--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^14.0.4",
     "ansi-html": "^0.0.9",
     "ansi-regex": "^6.0.1",
+    "async": "^3.2.3",
     "axios": "^0.26.1",
     "browserslist": "^4.20.2",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
     "glob-parent": "^6.0.2",
     "history": "^5.3.0",
     "immer": "^9.0.12",
@@ -21,7 +23,7 @@
     "nanoid": "^3.3.2",
     "node-forge": "^1.3.1",
     "node-notifier": "^10.0.1",
-    "nth-check": "^2.0.1",
+    "nth-check": "^2.1.1",
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dev-utils": "^12.0.0",
