--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Lilla Németh",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
