--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json-schema": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
     "nth-check": "^2.1.1",
     "pg": "^8.7.3",
     "react-dev-utils": "^12.0.1"
