--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"fs": "^0.0.1-security",
 		"glob-parent": "^6.0.2",
 		"json-schema": "^0.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.2",
 		"nth-check": "^2.1.1",
+		"path": "^0.12.7",
 		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
 		"react-dev-utils": "^12.0.1",
