--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Lost & Found App",
 	"main": "index.js",
 	"scripts": {
-		"heroku-postbuild": "cd frontend && npm i && npm run build",
+		"heroku-postbuild": "cd client && npm i && npm run build",
 		"start": "node index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
