--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"sequelize": "^6.35.2"
 	},
 	"devDependencies": {
+		"babel-register": "^6.26.0",
 		"sequelize-cli": "^6.6.2"
 	},
 	"type": "module"
