--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.16",
+		"axios": "^1.6.7",
+		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"jest": "^29.7.0",
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.3",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.36.0",
 		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2"
+	},
+	"devDependencies": {
+		"typescript": "^5.3.3"
 	}
 }
