--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "lost-and-found",
 	"version": "1.0.0",
 	"description": "Lost & Found App",
-	"main": "index.ts",
+	"main": "index.js",
 	"scripts": {
-		"start": "node index.ts"
+		"start": "node index.js"
 	},
 	"repository": "https://github.com/lilla-nemeth/lost-and-found.git",
 	"author": "Lilla Németh",
@@ -22,6 +22,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.3",
+		"path": "^0.12.7",
+		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.36.0",
 		"ts-jest": "^29.1.2",
