--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 	"author": "Lilla Németh",
 	"license": "MIT",
 	"dependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.16",
