enabling js in ts files (temporary)

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "ES6",
 		"module": "CommonJS",
+		"allowJs": true,
 		"outDir": "build",
 		"strict": true,
 		"noImplicitAny": true,
