--- a/server/package.json
+++ b/server/package.json
@@ -30,8 +30,7 @@
 		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.36.0",
-		"ts-jest": "^29.1.2",
-		"ts-node": "^10.9.2"
+		"ts-jest": "^29.1.2"
 	},
 	"devDependencies": {
 		"typescript": "^5.3.3"
