--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,13 +2,13 @@
 	"compilerOptions": {
 		"lib": ["es2023"],
 		"target": "es2022",
-		"module": "node16",
+		"module": "ES2022",
 		"allowJs": true,
 		"outDir": "build",
 		"strict": true,
 		"noImplicitAny": true,
 		"esModuleInterop": true,
-		"moduleResolution": "node16"
+		"moduleResolution": "node"
 	},
 	"exclude": ["node_modules", "build/**/*"],
 	"ts-node": {
