--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
 		"ts-jest": "^29.1.2"
 	},
 	"devDependencies": {
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/multer": "^1.4.11",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3"
 	},
