--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,8 @@
 		"strict": true,
 		"noImplicitAny": true,
 		"esModuleInterop": true,
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"typeRoots": ["./node_modules/@types", "./src/types"]
 	},
 	"paths": {
 		"/*": ["*"]
