--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,8 @@
 		"noImplicitAny": true,
 		"esModuleInterop": true,
 		"moduleResolution": "node",
-		"typeRoots": ["./node_modules/@types", "./src/types"]
+		"typeRoots": ["./node_modules/@types", "./src/types"],
+		"skipLibCheck": true
 	},
 	"paths": {
 		"/*": ["*"]
