--- a/server/package.json
+++ b/server/package.json
@@ -29,8 +29,7 @@
 		"path": "^0.12.7",
 		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
-		"sequelize": "^6.36.0",
-		"ts-jest": "^29.1.2"
+		"sequelize": "^6.36.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
