--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
 		"sequelize": "^6.36.0"
 	},
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.23.3",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/multer": "^1.4.11",
