--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@babel/preset-typescript": "^7.23.3",
+		"@jest/globals": "^29.7.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/multer": "^1.4.11",
