--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
 		"path": "^0.12.7",
 		"pg": "^8.11.3",
 		"pg-hstore": "^2.3.4",
-		"sequelize": "^6.36.0"
+		"sequelize": "^6.36.0",
+		"ts-jest": "^29.1.2"
 	},
 	"devDependencies": {
 		"@jest/globals": "^29.7.0",
