--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,17 +1,26 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"display": "Node 21",
+	"_version": "21.0.0",
 	"compilerOptions": {
-		"target": "es2016",
-		"module": "CommonJS",
+		"target": "es2022",
+		"module": "node16",
+		"moduleResolution": "node16",
 		"allowJs": true,
 		"outDir": "./dist",
 		"strict": true,
 		"noImplicitAny": true,
 		"esModuleInterop": true,
-		"moduleResolution": "Node",
 		"typeRoots": ["./node_modules/@types", "./src/types"],
 		"types": ["node", "jest"],
 		"rootDir": "src",
-		"sourceMap": true
+		"sourceMap": true,
+		"baseUrl": "src/",
+
+		"lib": ["es2023"],
+
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true
 	},
 	"exclude": ["**/*.test.ts", "node_modules", "dist"],
 	"include": ["src/**/*", "/**/*.ts"]
