--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc --p ./tsconfig.json",
 		"test": "jest -c ./jest.unit.json",
 		"test:coverage": "jest --coverage -c ./jest.unit.json",
-		"clear_jest": "jest --clearCache"
+		"test:watch": "jest --watchAll"
 	},
 	"repository": "https://github.com/lilla-nemeth/lost-and-found.git",
 	"author": "Lilla Németh",
@@ -23,7 +23,6 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
-		"jest": "^29.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.3",
@@ -39,6 +38,7 @@
 		"@types/bcryptjs": "^2.4.6",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/multer": "^1.4.11",
+		"jest": "^29.7.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3"
 	}
