--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
 	"display": "Node 21",
 	"_version": "21.0.0",
 	"compilerOptions": {
+		"lib": ["es2023"],
 		"target": "es2022",
 		"module": "node16",
 		"moduleResolution": "node16",
@@ -16,12 +17,9 @@
 		"rootDir": "src",
 		"sourceMap": true,
 		"baseUrl": "src/",
-
-		"lib": ["es2023"],
-
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true
 	},
-	"exclude": ["**/*.test.ts", "node_modules", "dist"],
+	"exclude": ["node_modules", "dist"],
 	"include": ["src/**/*", "/**/*.ts"]
 }
