--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,9 @@
 	"author": "Lilla Németh",
 	"license": "MIT",
 	"dependencies": {
+		"@babel/preset-env": "^7.23.9",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
-		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.16",
 		"axios": "^1.6.7",
 		"bcryptjs": "^2.4.3",
@@ -34,8 +34,10 @@
 		"tsc": "^2.0.4"
 	},
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.23.3",
 		"@jest/globals": "^29.7.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/jest": "^29.5.12",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/multer": "^1.4.11",
 		"jest": "^29.7.0",
