--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc --p ./tsconfig.json",
 		"test": "jest -c ./jest.unit.json",
 		"test:coverage": "jest --coverage -c ./jest.unit.json",
-		"test:watch": "jest --watchAll"
+		"test:watch": "jest --watchAll",
+		"clear_jest": "jest --clearCache"
 	},
 	"repository": "https://github.com/lilla-nemeth/lost-and-found.git",
 	"author": "Lilla Németh",
