--- a/server/jest.config.json
+++ b/server/jest.config.json
@@ -8,5 +8,6 @@
 	"transform": {
 		"^.+\\.ts?$": "babel-jest"
 	},
+	"setupFilesAfterEnv": ["./src/tests/closeConnection.test.ts"],
 	"moduleFileExtensions": ["js", "ts", "tsx", "json", "node"]
 }
