Updating readme (run tests cli options); test:watchAll script name change

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc --p ./tsconfig.json",
 		"test": "jest -c ./jest.config.json",
 		"test:coverage": "jest --coverage -c ./jest.config.json",
-		"test:watch": "jest --watchAll",
+		"test:watchAll": "jest --watchAll",
 		"test:clearCache": "jest --clearCache"
 	},
 	"repository": "https://github.com/lilla-nemeth/lost-and-found.git",
