--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -1,1 +1,16 @@
+# dependencies
 /node_modules
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+
+# misc
+.DS_Store
+.env
+
+yarn-debug.log*
+yarn-error.log*
