--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,16 @@
+# dependencies
 /node_modules
-.env
+
+# testing
+/coverage
+
+# production
+/build
 /dist
+
+# misc
+.DS_Store
+.env
+
+yarn-debug.log*
+yarn-error.log*
