renaming name in package.json

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lost-and-found",
+	"name": "lost-and-found-server",
 	"version": "1.0.0",
 	"description": "Lost & Found App",
 	"main": "server.ts",
