adding missing dependency to fix warning during compiling w webpack

--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,8 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:8080"
+	"proxy": "http://localhost:8080",
+	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+	}
 }
