--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login to Github Container Registry
-        run: docker login --u ${{ github.repository_owner }} --p ${{ secrets.GH_PAT }} ghcr.io
+        run: docker login --username ${{ github.repository_owner }} --password ${{ secrets.GH_PAT }} ghcr.io
 
       - name: Build and push Docker image
         run: |
