--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login to Github Container Registry
-        run: docker login --username ${{ github.repository_owner }} --password ${{ secrets.GH_PAT }} ghcr.io
+        run: echo "${{ secrets.GH_PAT }}" | docker login --username ${{ github.repository_owner }} --password-stdin ghcr.io
 
       - name: Build and push Docker image
         run: |
-          docker-compose -f docker-compose.yml build --parallel --tag ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-ghcr:latest
+          docker-compose -f docker-compose.yml build --parallel --compress --quiet --tag ghcr.io/${{ github.repository }}-ghcr:latest
           docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-ghcr:latest
