removing github.repository_owner

--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker-compose -f docker-compose.yml build --parallel --compress --quiet --tag ghcr.io/${{ github.repository }}-ghcr:latest
-          docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-ghcr:latest
+          docker push ghcr.io/${{ github.repository }}-ghcr:latest
