--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build_and_publish:
     runs-on: ubuntu-latest
+    env:
+      PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
+      PG_DATABASE: ${{ secrets.PG_DATABASE }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
