--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -23,15 +23,15 @@ jobs:
         run: |
           # Build and push PostgreSQL service image
           docker-compose -f docker-compose.yml build postgres
-          docker tag postgres:latest ghcr.io/${{ github.repository_owner }}/lost-and-found-postgres:latest
-          docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-postgres:latest
+          docker tag postgres:latest ghcr.io/${{ github.repository_owner }}/postgres:16.1
+          docker push ghcr.io/${{ github.repository_owner }}/postgres:16.1
 
           # Build and push Server service image
           docker-compose -f docker-compose.yml build server
-          docker tag server:latest ghcr.io/${{ github.repository_owner }}/lost-and-found-server:latest
-          docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-server:latest
+          docker tag server:latest ghcr.io/${{ github.repository_owner }}/lost-and-found-server-dev:tag-v1.0.0
+          docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-server-dev:tag-v1.0.0
 
           # Build and push Client service image
           docker-compose -f docker-compose.yml build client
-          docker tag client:latest ghcr.io/${{ github.repository_owner }}/lost-and-found-client:latest
-          docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-client:latest
+          docker tag client:latest ghcr.io/${{ github.repository_owner }}/lost-and-found-client-dev:tag-v1.0.0
+          docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-client-dev:tag-v1.0.0
