--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:16.1
+    image: postgres
     restart: always
     environment:
       - POSTGRES_PASSWORD=${PG_PASSWORD}
       - POSTGRES_DB=${PG_DATABASE}
+      - POSTGRES_VERSION: '16.1'
     ports:
       - 5432:5432
     networks:
