--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           # Build and push PostgreSQL service image
-          docker-compose -f docker-compose.yml build postgres
+          docker pull postgres:16.1
           docker tag postgres:16.1 ghcr.io/${{ github.repository_owner }}/postgres:16.1
           docker push ghcr.io/${{ github.repository_owner }}/postgres:16.1
 
