--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -28,10 +28,10 @@ jobs:
 
           # Build and push Server service image
           docker-compose -f docker-compose.yml build server
-          docker tag lost_and_found_server:tag-v1.0.0 ghcr.io/${{ github.repository_owner }}/lost-and-found-server-dev:tag-v1.0.0
+          docker tag lost-and-found-server-dev:tag-v1.0.0 ghcr.io/${{ github.repository_owner }}/lost-and-found-server-dev:tag-v1.0.0
           docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-server-dev:tag-v1.0.0
 
           # Build and push Client service image
           docker-compose -f docker-compose.yml build client
-          docker tag lost_and_found_client:tag-v1.0.0 ghcr.io/${{ github.repository_owner }}/lost-and-found-client-dev:tag-v1.0.0
+          docker tag lost-and-found-client-dev:tag-v1.0.0 ghcr.io/${{ github.repository_owner }}/lost-and-found-client-dev:tag-v1.0.0
           docker push ghcr.io/${{ github.repository_owner }}/lost-and-found-client-dev:tag-v1.0.0
