--- a/client/package.json
+++ b/client/package.json
@@ -29,20 +29,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "resolutions": {
-    "http-proxy-middleware": "^3.0.3",
-    "rollup": "^4.24.3",
-    "body-parser": "^1.20.3",
-    "ws": "^8.18.0",
-    "nth-check": "^2.1.1",
-    "send": "^1.1.0",
-    "serve-static": "^1.16.2",
-    "express": "^4.21.1",
-    "micromatch": "^4.0.8",
-    "webpack": "^5.96.1",
-    "ejs": "^3.1.10",
-    "postcss": "^8.4.47"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -64,5 +50,20 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "resolutions": {
+    "rollup": "^4.24.3",
+    "body-parser": "^1.20.3",
+    "ws": "^8.18.0",
+    "nth-check": "^2.1.1",
+    "send": "^1.1.0",
+    "serve-static": "^1.16.2",
+    "micromatch": "^4.0.8",
+    "webpack": "^5.96.1",
+    "ejs": "^3.1.10",
+    "postcss": "^8.4.47",
+    "express": "^4.21.1",
+    "webpack-dev-middleware": "^7.4.2",
+    "http-proxy-middleware": "2.0.7"
+  }
 }
