--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "postcss": "^8.4.47",
     "express": "^4.21.1",
     "webpack-dev-middleware": "^7.4.2",
-    "http-proxy-middleware": "2.0.7"
+    "http-proxy-middleware": "2.0.7",
+    "cookie": "^1.0.1"
   }
 }
